--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "Agency Website",
   "main": "index.html",
   "scripts": {
+    "start": "yarn start",
     "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
   },
   "repository": {
