--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "Agency Website",
   "main": "index.html",
   "scripts": {
-    "start": "npm start",
+    "start": "npm start live-server",
     "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
   },
   "repository": {
