--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "Agency Website",
   "main": "index.html",
   "scripts": {
-    "start": "live-server",
+    "start": "npm run index.html",
     "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
   },
   "repository": {
