--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,5 @@
-pip~=24.0
-attrs~=23.2.0
-wheel~=0.43.0
-tornado~=6.4.1
-Jinja2~=3.1.4
-mariadb~=3.3.1
-Flask~=2.3.2
+Flask==2.3.2
+Flask-Cors==4.0.1
+gunicorn==21.2.0
+mariadb==1.1.10
+
