--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,119 @@
+appnope==0.1.4
+asttokens==2.4.1
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+Bootstrap-Flask==2.3.3
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.8
+dnspython==2.6.1
+docopt==0.6.2
+email_validator==2.1.1
+executing==2.0.1
+fastjsonschema==2.20.0
+filelock==3.15.4
 Flask==2.3.2
+Flask-CKEditor==0.5.1
 Flask-Cors==4.0.1
+Flask-Gravatar==0.5.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+google-api-core==2.19.0
+google-auth==2.30.0
+google-cloud==0.34.0
+google-cloud-texttospeech==2.16.3
+googleapis-common-protos==1.63.1
+greenlet==3.0.3
+grpcio==1.64.1
+grpcio-status==1.62.2
 gunicorn==21.2.0
+h11==0.14.0
+idna==3.7
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
 mariadb==1.1.10
-
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mistune==3.0.2
+MouseInfo==0.1.3
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+numpy==1.26.4
+outcome==1.3.0.post0
+packaging==24.0
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pipenv==2024.0.1
+pipreqs==0.5.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+proto-plus==1.23.0
+protobuf==4.25.3
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+Pygments==2.18.0
+PyMsgBox==1.0.9
+pyobjc-core==10.3.1
+pyobjc-framework-Cocoa==10.3.1
+pyobjc-framework-Quartz==10.3.1
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==0.1.30
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytweening==1.2.0
+pytz==2024.1
+pyzmq==26.0.3
+referencing==0.35.1
+requests==2.32.3
+rpds-py==0.19.1
+rsa==4.9
+rubicon-objc==0.4.9
+selenium==4.21.0
+setuptools==70.0.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+SQLAlchemy==2.0.25
+stack-data==0.6.3
+tinycss2==1.3.0
+tornado==6.4.1
+traitlets==5.14.3
+trio==0.25.1
+trio-websocket==0.11.1
+typing_extensions==4.12.0
+tzdata==2024.1
+urllib3==2.2.1
+virtualenv==20.26.3
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.0.0
+wheel==0.43.0
+wsproto==1.2.0
+WTForms==3.0.1
+yarg==0.1.9
